Shrank images, fixed all sensing tables

--- a/design-details/power.tex
+++ b/design-details/power.tex
@@ -32,7 +32,7 @@ To save on power \autoref{fig:stepper-config} shows that two motors will work to
 \begin{figure}[H]
     \centering
     \caption{Stepper motor configuration}
-    \includegraphics[width=\textwidth]{images/stepper-config.png}
+    \includegraphics[width=0.5\textwidth]{images/stepper-config.png}
     \label{fig:stepper-config}
 \end{figure}
 The reason we have to use two stepper motors for the short axis rotation is that because as the panels rotate about their central axis any rod or pulley or tensioner system would come out of alignment. Another advantage of this due to the lack of torque in the system is that using a motor controller the two motors can be driven with a single H-bridge with a minimum penalty to power, this will ensure that both panels are always pointed at the same angle in the desired direction.
