--- a/research/technology.tex
+++ b/research/technology.tex
@@ -8,7 +8,7 @@ Ocean Insight is a local manufacturer of high-end, low size, weight, and power s
 \begin{figure}[H]
     \caption{Ocean ST NIR Microspectrometer}
     \centering
-    \includegraphics[width=\textwidth]{images/3-2-1Pic.png}
+    \includegraphics[width=0.5\textwidth]{images/3-2-1Pic.png}
 \end{figure}
 \subsubsection{AgroCares Nutrient Soil Scanner}
 
@@ -16,7 +16,7 @@ AgroCares offers a Near Infrared Spectrometer specifically designed for Proximit
 \begin{figure}[H]
     \caption{AgroCares Nutrient Soil Scanner}
     \centering
-    \includegraphics[width=\textwidth]{images/3-2-2Pic.png}
+    \includegraphics[width=0.5\textwidth]{images/3-2-2Pic.png}
 \end{figure}
 
 AgroCares offers a Near Infrared Spectrometer specifically designed for Proximity Soil Sensing. Its spectral range is from 1300 to 2500nm and it uses Micro Electrical Mechanical Systems or MEMS to capture EM Waves reflecting off the soil. The real value of the product is in its wireless communications system. The device uses Bluetooth 4.0 to send data to a cloud data center. There, spectrographs of large data sets of soil with known nutrient contents are compared with the reading, cutting out the need for on-sight calibration. The system is handheld and uses eight tungsten halogen bulbs to blast the soil with energy. This light is collected in an extremely small area, sampling 65 squared millimeters. It would be worth researching to see if the Tungsten bulbs were linked to the 1300 to 2500nm spectral range or if another probe and sensor would suffice.
