--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -13,6 +13,8 @@
 \usepackage{upgreek}
 \usepackage{multirow}
 \usepackage{amsmath}
+\usepackage{textcomp}
+\usepackage{tablefootnote}
 \hypersetup{
     colorlinks=true,
     linkcolor=black,
