--- a/design-details/integration.tex
+++ b/design-details/integration.tex
@@ -1,2 +1,9 @@
 \subsection{Subsystem Integration}
 \label{sec:subsystem_integration}
+The integration of all the subsystems is centered around the 
+
+\subsubsection{Sensing--Control}
+
+\subsubsection{Power--Control}
+
+\subsubsection{Control--Web}
