--- a/design-details/sensing.tex
+++ b/design-details/sensing.tex
@@ -1,4 +1,5 @@
 \subsection{Sensing Subsystem}
+\label{sec:sensing_subsystem}
 \begin{figure}[H]
     \caption{Sensing subsystem block diagram}
     \centering
