--- a/design-constraints/standards.tex
+++ b/design-constraints/standards.tex
@@ -19,7 +19,7 @@ These channels specifically reside in an industrial, scientific and medical
 (ISM) band. This standard also provides datagram frames for the transport
 layer.
 
-\paragraph{TCP} Transmission Control Protocol (TCP) will be used to satisfy transport layer
+\paragraph{TCP} \label{tcp_standard} Transmission Control Protocol (TCP) will be used to satisfy transport layer
 requirements of the product, and will be used to transmit symbols (i.e.
 from any commands, data, settings, telemetry, etc.) between Amazon Web
 Services (AWS) and the microcontroller (MCU). TCP was chosen over other
@@ -56,5 +56,5 @@ This standard specifies a ``compact, URL-safe means of representing claims to be
 Claims are in the payload of a JWT. The basic claims specified by this standard are \verb|iss| ``issuer'', \verb|sub| ``subject'', \verb|aud| ``audience'', \verb|exp| ``expiration'', \verb|nbf| ``not before'', \verb|iat| ``issued at'', and \verb|jti| ``JSON Token ID''. For our purposes, all of the JWTs will be self-signed so the issuer, JSON Token ID, audience, and issuer claims can all be disregarded as they are meant for cross-service authentication. However, following the standard, the ``subject'' claim will be the user principal, and the expiration and issuad at claims will be used to invalidate a token cookie after a certain period of time. The standard allows for public and private claims outside of these as well. Public claims are registered with the IANA while private claims are collision prone, neither of these are of true concern to us.
 \subsubsection{HTTP/1.1 (RFC 2616)}
 This standard defines an application-level protocol communicating across the internet. RFC 2616 is an update to previous protocols that increase the capabilities of the original in the form of persistent connections and the ability to send files in the form of MIME types. MIME types hold metadata and the binary data of a file. This standard also serves to define how dates/times are handled on the web as well.
-\subsubsection{WebSocket Protocol (RFC 6455)}
+\subsubsection{WebSocket Protocol (RFC 6455)} \label{websocket_protocol}
 The WebSocket Protocol standard is important to frame the way that the web server and microcontroller communicate. It specificies how the connection is made, how the data is formatted, and some security considerations. Most of these items are abstracted away from users in the forms of libraries however the security concerns are likely the most important part of this standard in terms of this project. The reason being that we are receiving location and IP data from the packets in order to build out commands like where to point the solar panels. Exposing PII such as location to the world wide web is a major concern that we would like to avoid by following this standard.
