Slight update to Charge controllers
Updated this a little to hopefully clarify a few things about it's functions. Will add pictures later

--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -246,7 +246,7 @@ The selected solar panel that we chose was the Eco Worthy 10W 12V monocrystallin
 	\end{tabularx}
 \end{table}
 \paragraph{Solar Charge Controller Selection}
-Solar charge controllers play an important role in this system because this system is running on solar energy. A solar charge controller is a regulator that goes in between the solar panel and the battery, regulating the total output power coming out of the solar panel. This is important because this will prevent the battery from overcharging and possibly reducing its effectiveness. If the wrong charge controller was picked, it could result in a loss of power that is generated, and can harm any device. As stated in the power requirement section, finding the total power needed for the whole system is important because we can use that to help determine the proper charge controller to get. \par
+Solar charge controllers play an important role in this system because this system is running on solar energy. The solar charge controller acts as another type of voltage regulator that goes in between the solar panel and the battery, regulating the total output power coming out of the solar panel and into the battery. This is important because this will prevent the battery from overcharging/undercharging and possibly reducing its effectiveness. This in all helps optimize charging and prolonging the batterylife. If the wrong charge controller was picked, it could result in a loss of power that is generated, and can harm any device. \par
 There are two main types of solar charge controllers: Maximum Power Point Tracking (MPPT) and Pulse Width Modulated (PWM). Choosing the right charge controller is based on current and voltage characteristics. This is because they regulate input voltage coming in from the solar panel and output voltage of what is coming out to the battery.\par
 Maximum power point tracking (MPPT) is a technique that observes and regulates energy coming from the solar panel and into the battery. What makes this special is that it can match the solar panel voltage to the battery voltage, which allows it to maximize the charge efficiency. They operate as a DC to DC converter, taking in high DC input from the solar panel, changing it to high AC voltage, then back down to DC voltage.\par
 Pulse width modulated (PWM) solar charge controllers are considered the original charge controller compared to the MPPT charge controller. They are less expensive and the technique behind this controller is also simpler. On a basic level, the PWM controller acts as an on-off regulator. When the battery voltage reaches a certain level, the PWM controller will slowly reduce the charging current, up until the battery reaches the maximum amount of energy. This makes it great for smaller installations because the solar panel and the controller can match better. \par
