--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -107,6 +107,71 @@ Therefore, all of the MCUs listed above support either the 802.11 or Bluetooth s
 \paragraph{Selection} Ultimately, the \href{https://www.ti.com/tool/LAUNCHCC3220MODASF}{LAUNCHCC3220MODASF} was chosen as the microcontroller development board for this project. In the event that the aforementioned LaunchPad is not able to be obtained, the \href{https://www.ti.com/tool/CC3220SF-LAUNCHXL}{CC3220SF-LAUNCHXL} has  quivalent capability for the project's needs.
 
 These boards, henceforth referred to as the CC3220, are able to be requested from our university at no upfront cost to our team. This was the driving factor behind choosing the CC3220 over other microcontroller development boards. It was also determined that the microcontroller \emph{must} be able to interface via the 802.11 (WiFi) standard, for reasons that are detailed in \autoref{sec:controller_subsystem}---therefore, the LAUNCHXL-CC26X2R1 and Nano 33 BLE were disqualified from selection. The Pico W was considered due to its low cost, and the B-L4S5I-IOT01A considered because of its abundant peripherals, but both ultimately lost out to the Texas Instruments products.
+
+\paragraph{CC3200} Due to difficulties in acquiring the CC3220 (second-generation SimpleLink device), our team made the decision to use the CC3200 (first-generation SimpleLink). These parts are mostly identical, with the differences detailed in \autoref{table:cc32x0_diff}. Development will take place on the \href{https://www.ti.com/tool/CC3200-LAUNCHXL}{CC3200-LAUNCHXL}, with the PCB MCU part to be \href{https://www.ti.com/product/CC3200}{CC3200} (if needed).
+
+\begin{table}
+	\centering
+	\begin{tabularx}{\textwidth}
+		{
+			| >{\raggedright\arraybackslash}X
+			| >{\raggedright\arraybackslash\columncolor[gray]{0.8}}X
+			| >{\raggedright\arraybackslash}X
+			|
+		}
+		\caption{Differences between CC3200 and CC3220}
+		\label{table:cc32x0_diff} \\
+		\hline
+		\textbf{Model} & \textbf{CC3200} & \textbf{CC3220} \\
+		\hline
+		\textbf{Micro\-controller} & CC3200 & CC3220SF \\
+		\hline
+		\textbf{Secure Flash (MB)} & n/a & 1 \\
+		\hline
+		\textbf{Simultaneous TCP/UDP Sockets} & 8 & 16 \\
+		\hline
+		\textbf{WiFi Receive Sensitivity (dBm, 1 DSSS)} & -95.7 & -96 \\
+		\hline
+		\textbf{WiFi Receive Sensitivity (dBm, 54 OFDM)} & -74.0 & -74.5  \\
+		\hline
+		\textbf{Hibernate Current Draw ($\upmu$A)} & 4 & 4.5  \\
+		\hline
+		
+	\end{tabularx}
+\end{table}
+
+\paragraph{Bill of Materials} The bill of materials for the controller subsystem can be found in \autoref{table:controller_bom}.
+
+\begin{table}
+	\centering
+	\begin{tabularx}{\textwidth}
+		{
+			| >{\raggedright\arraybackslash}l
+			| >{\raggedright\arraybackslash}l
+			| >{\raggedright\arraybackslash}X
+			| >{\raggedright\arraybackslash}X
+			| >{\raggedright\arraybackslash}X
+			|
+		}
+		\caption{Controller subsystem bill of materials}
+		\label{table:controller_bom} \\
+		\hline
+		\textbf{Qty} &  \begin{tabular}[c]{@{}l@{}}\textbf{Cost}\\\textbf{(\$/ea)}\end{tabular}& \textbf{Manufacturer} & \textbf{Item} & \textbf{Model Number} \\
+		\hline
+		1 & 0.00 & Texas Instruments & SimpleLink Wi-Fi CC3200 LaunchPad & CC3220-LAUNCHXL \\
+		\hline
+		2 & 10.88 & Texas Instruments & CC3200 & CC3200R1M2RGCR \\
+		\hline
+		2 & 3.80 & Taiyo Yuden & Surface Mount 2.4 GHz Antenna & AH316M245001-T \\
+		\hline
+		2 & 6.95 & Adafruit & Plastic Water Solenoid Valve & 997 \\
+		\hline
+	\end{tabularx}
+\end{table}
+
+
+
+
 % End Controller Subsystem
 
 \subsubsection{Power Subsystem}
@@ -347,9 +412,9 @@ The last type is the buck/boost converter and as the name suggests, this type of
 \end{figure}
 This type of converter offers many benefits. One of the reasons that it offers so much is because it brings both the buck converter and the boost converter together. It also offers lower operation cycling and is more efficient between the input and output voltages. A few downsides to this is that there is no isolation between the input and output and the output is always inverted, which results in complex sensing and feedback in the circuit. \par
 \subparagraph{Voltage Regulator Selection}
-The main function of a voltage regulator is to regulate output voltage from the power source, which is the 12V battery powered by solar panels, to the microcontroller and other components, ensuring that each part receives the correct amount of voltage. The microcontroller we will be using is the CC3220MODASF (referred to as CC3220) operates at a 3.3V input voltage and as a result will require a voltage regulator that can lower the output voltage. \par
+The main function of a voltage regulator is to regulate output voltage from the power source, which is the 12V battery powered by solar panels, to the microcontroller and other components, ensuring that each part receives the correct amount of voltage. The microcontroller we will be using, the Texas Instruments CC3200, operates at a 3.3V input voltage and as a result will require a voltage regulator that can lower the output voltage. \par
 As mentioned before, not all components are going to have the same operating voltages. With the various components and voltage requirements, multiple types of voltage regulators will be tested to see which one will be the most efficient and best fit for our model.\par
-For our system, we will be looking at the LD1117 series (Linear), LM317 (Linear), LM2576 (Switching), and LM2596 (Switching). Of the various types of regulators, these were picked because the required input voltage for the CC3220 is 3.3V. These different voltage regulators will be compared based on efficiency, output voltage, cost, and any other feature that it may offer. \par
+For our system, we will be looking at the LD1117 series (Linear), LM317 (Linear), LM2576 (Switching), and LM2596 (Switching). Of the various types of regulators, these were picked because the required input voltage for the CC3200 is 3.3V. These different voltage regulators will be compared based on efficiency, output voltage, cost, and any other feature that it may offer. \par
 From the datasheets of each voltage regulator we were able to make the comparisons in the table below.\par
 \begin{table}[H]
     \centering
